--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
 body {
+  background-color: #89CFF0; /* A beachy blue */
+  font-family: Arial, sans-serif;
+  color: #333; /* A dark gray for the text */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+h1 {
+  color: #FF7F50; /* Coral color */
+  text-align: center;
+  padding-top: 20px;
+}
+
+form, .Weather {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  padding: 20px;
+  margin: 20px;
+  width: 80%;
+  max-width: 800px;
+}
+
+form {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 65vw;
+}
+
+form input {
+  height: 3em;
+  border-radius: 8px;
+  font-size: 14px;
+}
+
+button {
+  background-color: #FF7F50; /* Coral color */
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #FF5722;
+}
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.calendar {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+  width: 75vw
+}
+
+.calendar-day {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  padding: 20px;
+  margin: 20px 0;
+  text-align: center;
+}
+
+.calendar-plans {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.plans {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+  flex-direction: row;
+}
+
+.plans p {
+  display: inline;
 }
